--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -26,6 +25,7 @@
               'accent-green': '#34D399',
               'accent-blue': '#60A5FA',
               'accent-yellow': '#FBBF24',
+              'accent-purple': '#A78BFA',
             },
             animation: {
               'coin-drop': 'coin-drop 0.8s ease-out forwards',
